# swift-protobuf

./: .git-blame-ignore-revs  .gitignore  .gitmodules  .jazzy.yaml  .spi.yml  API.md  CMakeLists.txt  CODE_OF_CONDUCT.md.  CollectTests.awk  CopyrightFixup.sh  Makefile  Package.swift  Package@swift-3.swift  Package@swift-4.swift  Package@swift-5.10.swift  Package@swift-5.4.swift  Package@swift-5.5.swift  Package@swift-5.6.swift  Package@swift-5.7.swift  Package@swift-5.8.swift  Package@swift-5.swift  Package@swift-6.0.swift  Package@swift-6.1.swift  README.md  SwiftProtobuf.podspec  SwiftProtobufCore.podspec  SwiftProtobufFoundationCompat.podspec  SwiftProtobufRuntime.podspec  failure_list_swift.txt  known_api_breaks.txt
.github/: issue_template.md
BTests/: .gitignore  Cargo.toml  build.rs
DevTools/: CollectTests.awk  CopyrightFixup.sh  LibraryVersions.py  UpdateProtobufSubtrees.py
Documentation/: API.md  CONFORMANCE_TESTS.md  FAQ.md  GENERATED_CODE.md  INTERNALS.md  PLUGIN.md  RELEASING.md  STYLE_GUIDELINES.md
FuzzTesting/: .gitignore  FuzzAsyncMessageSequence.dict  FuzzBinary.dict  FuzzBinaryDelimited.dict  FuzzJSON.dict  FuzzTextFormat.dict  Package.swift  README.md  do_build.sh  make_FuzzBinary_dict
Performance/: .gitignore  Harness.cc  Harness.h  Harness.swift  HarnessResults.html  harness-visualization.css  harness-visualization.js  main.cc  main.swift  multi_perf_runner.sh  perf_runner.sh  perf_runner_cpp.sh  perf_runner_swift.sh
Performance/runners/: CMakeLists.txt  cpp.sh  swift.sh
PluginExamples/: Package.swift  Package@swift-5.10.swift  Package@swift-5.8.swift  Package@swift-5.9.swift  Package@swift-6.0.swift  Package@swift-6.1.swift
Protos/: fuzz_testing.proto  generated_swift_names_enum_cases.proto  generated_swift_names_enums.proto  generated_swift_names_fields.proto  generated_swift_names_messages.proto  pluginlib_descriptor_test.proto  swift-options.proto  unittest_swift_enum.proto  unittest_swift_enum_proto3.proto  unittest_swift_extension.proto  unittest_swift_extension4.proto  unittest_swift_fieldorder.proto  unittest_swift_groups.proto  unittest_swift_größ.proto  unittest_swift_naming.proto  unittest_swift_naming_no_prefix.proto  unittest_swift_oneof_all_required.proto  unittest_swift_reserved.proto  unittest_swift_reserved_ext.proto  unittest_swift_runtime_proto2.proto  unittest_swift_runtime_proto3.proto
Reference/: fuzz_testing.pb.swift  fuzz_testing.pb.text.swift  generated_swift_names_enum_cases.pb.swift  generated_swift_names_enum_cases.pb.text.swift  generated_swift_names_enums.pb.swift  generated_swift_names_enums.pb.text.swift  generated_swift_names_fields.pb.swift  generated_swift_names_messages.pb.swift  generated_swift_names_messages.pb.text.swift  swift-options.pb.swift  (+41 more)
Sources/SwiftProtobuf/: AnyMessageStorage.swift  AnyUnpackError.swift  Applying.swift  Array+JSONAdditions.swift  AsyncMessageSequence.swift  AsyncVisitor.swift  BinaryDecoder.swift  BinaryDecodingError.swift  BinaryDecodingOptions.swift  BinaryDelimited.swift  BinaryEncoder.swift  BinaryEncodingError.swift  BinaryEncodingOptions.swift  BinaryEncodingSizeVisitor.swift  BinaryEncodingVisitor.swift  BinaryReverseEncoder.swift  BinaryReverseEncodingVisitor.swift  BinaryTypeAdditions.swift  BytecodeInterpreter.swift  BytecodeReader.swift  CMakeLists.txt  Compression+Decompressing.swift  Compression.swift  CustomJSONCodable.swift  CustomJSONWKTClassification.swift  Data+Extensions.swift  Data+SwiftProtobufContiguousBytes.swift  DebugDescriptionVisitor.swift  Decoder.swift  DoubleFormatter.swift  DoubleParser.swift  EncodingError.swift  Enum.swift  EnumLayout.swift  EnumSchema.swift  EnumWitnesses.swift  Errors.swift  Exports.swift  ExtensibleMessage.swift  ExtensionFieldValueSet.swift  (+212 more)
Sources/SwiftProtobuf/Docs.docc/: API.md  index.md
Sources/SwiftProtobufPluginLibrary/: Array+Extensions.swift  BytecodeWriter.swift  CMakeLists.txt  CodeGenerator.swift  CodeGeneratorParameter.swift  CodePrinter.swift  Descriptor+Extensions.swift  Descriptor.swift  FeatureResolver.swift  FieldNumbers.swift  GeneratorOutputs.swift  Google_Protobuf_Compiler_CodeGeneratorResponse+Extensions.swift  Google_Protobuf_Edition+Extensions.swift  Google_Protobuf_SourceCodeInfo+Extensions.swift  HashableArray.swift  NamingUtils.swift  PluginLibEditionDefaults.swift  ProtoCompilerContext.swift  ProtoFileToModuleMappings.swift  ProvidesDeprecationComment.swift  ProvidesLocationPath.swift  ProvidesSourceCodeLocation.swift  StandardErrorOutputStream.swift  StringUtils.swift  SwiftLanguage.swift  SwiftProtobufInfo.swift  SwiftProtobufNamer.swift  UnicodeScalar+Extensions.swift  descriptor.pb.swift  plugin.pb.swift  plugin.pb.text.swift  swift_protobuf_module_mappings.pb.swift  swift_protobuf_module_mappings.pb.text.swift
Sources/SwiftProtobufPluginLibrary/Docs.docc/: index.md
Sources/protoc-gen-swift/: BytecodeWriter.swift  CMakeLists.txt  CodePrinter.swift  CommandLine+Extensions.swift  Compression+Compressing.swift  Context.swift  Descriptor+Extensions.swift  EnumCaseGenerator.swift  EnumGenerator.swift  EnumSchemaCalculator.swift  ExtensionGenerator.swift  ExtensionSetGenerator.swift  FieldGenerator.swift  FileGenerator.swift  FileIo.swift  FilePrinter.swift  GenerationError.swift  GeneratorOptions.swift  Google_Protobuf_DescriptorProto+Extensions.swift  Google_Protobuf_EnumDescriptorProto+Extensions.swift  Google_Protobuf_EnumValueDescriptorProto+Extensions.swift  Google_Protobuf_FileDescriptorProto+Extensions.swift  MapEntryGenerator.swift  MessageFieldGenerator.swift  MessageGenerator.swift  MessageLayoutCalculator.swift  MessageSchemaCalculator.swift  MessageStorageClassGenerator.swift  MessageStorageDecision.swift  NamespaceGenerator.swift  OneofGenerator.swift  ProtoNameInstructionWriter.swift  ProvidesDeprecationComment+Extensions.swift  ProvidesSourceCodeLocation+Extensions.swift  Range+Extensions.swift  ReflectionTableCalculator.swift  ReservedWords.swift  SchemaWriter.swift  StringUtils.swift  SwiftGeneratorPlugin.swift  (+6 more)
Sources/protoc-gen-swift/Docs.docc/: index.md  spm-plugin.md
(+1187 files in other folders)
